# terminal-supports-emoji-rs

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: check_current_terminal.rs
