[package]
name = "terminal-supports-emoji"
description = "Check whether the current terminal supports emoji"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/SirWindfield/terminal-supports-emoji-rs"
version = "0.1.2"
authors = ["SirWindfield <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
atty = "0.2.14"
serde = { version = "1.0.124", features = ["derive"], optional = true }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
lazy_static = "1.4.0"
